--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
          
 
           <!-- Main Product Image - Large Display -->
-          <img src="upscalemedia-transformed-removebg-preview.png" alt="Premium Glass Accessories Display" />
+          <img src="Screenshot 2025-09-20 050748.png" alt="Premium Glass Accessories Display" />
 
           <!-- Product Description -->
           <div data-en="Premium Glass Accessories Collection" data-ar="مجموعة إكسسوارات زجاجية متميزة" class="product-name">Premium Glass Accessories Collection</div>
@@ -380,3 +380,4 @@
 <script type="module" src="config.js"></script>
 <script type="module" src="login.js"></script>
 </html>
+
